welcome.lessons.welcome.array.array667.Array667.scala.error
array667:3: error: value tu is not a member of Int
	for (k<-0 tu nums.length){
                  ^